force-app/main/default/objects/Revenue_Billing_Event__c/Revenue_Billing_Event__c.object-meta.xml
<CustomObject>
    <label>Revenue Billing Event</label>
    <nameField>
        <label>Revenue Billing Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Billing Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>