force-app/main/default/objects/Revenue_Billing_Event__c/fields/Allocation__c.field-meta.xml
<CustomField>
    <fullName>Allocation__c</fullName>
    <label>StaffAllocation</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>