force-app/main/default/objects/Revenue_Billing_Event__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Revenue Billing Events</relationshipLabel>
    <relationshipName>Contract</relationshipName>
    <type>Lookup</type>
</CustomField>