force-app/main/default/objects/Revenue_Billing_Event__c/fields/Contract_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line_Number__c</fullName>
    <defaultValue>&quot;Line1&quot;</defaultValue>
    <label>Contract Line Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>