force-app/main/default/objects/Revenue_Billing_Event__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <defaultValue>&quot;Engagement&quot;</defaultValue>
    <label>Contract Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>