force-app/main/default/objects/Revenue_Billing_Event__c/fields/ERP_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_Event_ID__c</fullName>
    <label>ERP Event ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>