force-app/main/default/objects/Revenue_Billing_Event__c/fields/ERP_Last_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>ERP_Last_Integration_Status__c</fullName>
    <label>ERP Last Integration Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>