force-app/main/default/objects/Revenue_Billing_Event__c/fields/ERP_Source_Rerence__c.field-meta.xml
<CustomField>
    <fullName>ERP_Source_Rerence__c</fullName>
    <label>ERP Source Rerence</label>
    <type>AutoNumber</type>
</CustomField>