force-app/main/default/objects/Revenue_Billing_Event__c/fields/Event_Amount__c.field-meta.xml
<CustomField>
    <fullName>Event_Amount__c</fullName>
    <label>Event Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>