force-app/main/default/objects/Revenue_Billing_Event__c/fields/Hold_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Hold_Invoice__c</fullName>
    <label>Hold Invoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>