force-app/main/default/objects/Revenue_Billing_Event__c/fields/Is_Billing_Contract__c.field-meta.xml
<CustomField>
    <fullName>Is_Billing_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Billing Contract</label>
    <type>Checkbox</type>
</CustomField>