force-app/main/default/objects/Revenue_Billing_Event__c/fields/Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Number__c</fullName>
    <formula>Contract__r.Opportunity__r.Opportunity_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Number</label>
    <type>Text</type>
</CustomField>